docker/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-k8s-client
  labels:
    app: learn-k8s-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn-k8s-client
  template:
    metadata:
      labels:
        app: learn-k8s-client
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: client
          image: learn-k8s-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
