docker/k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-k8s-server
  labels:
    app: learn-k8s-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn-k8s-server
  template:
    metadata:
      labels:
        app: learn-k8s-server
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: server
          image: learn-k8s-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
