docker/k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: learn-k8s-server
spec:
  selector:
    app: learn-k8s-server
  ports:
    - port: 80
      targetPort: 80
